--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "Name": "sampleconfig",
     "IPAddr": "localhost:5432",
     "AdminIPAddr": "localhost:10000",
+    "ReadAnnotation": "ready",
     "healthcheck": {
         "delay": 60,
         "query": "select now()"
