enable adapters for inbound and outbound messages

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "Name": "sampleconfig",
     "IPAddr": "localhost:5432",
     "AdminIPAddr": "localhost:10000",
-    "ReadAnnotation": "ready",
+    "ReadAnnotation": "read",
     "healthcheck": {
         "delay": 60,
         "query": "select now()"
