add audit test, change audit adapter to produce a log file dedicated to audit records

--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
         "database": "postgres"
     },
     "Adapters": [
+	    "audit"
     ],
     "Master": {
         "HostPort": "127.0.0.1:12000",
