--- a/config.json
+++ b/config.json
@@ -1,42 +1,43 @@
 {
-    "Name": "sampleconfig",
-    "HostPort": "localhost:5432",
-    "AdminHostPort": "localhost:10000",
-    "ReadAnnotation": "read",
-    "StartAnnotation": "start",
-    "FinishAnnotation": "finish",
-    "healthcheck": {
-        "delay": 60,
-        "query": "select now()"
-    },
-    "pool": {
-        "enabled": true,
-        "capacity": 2
-    },
-    "credentials": {
-        "username": "postgres",
-        "password": "password",
-        "database": "postgres"
-    },
-    "Adapters": [{
-        "AdapterType": "audit",
-        "metadata": {
-            "Age": 6,
-            "filepath": "/tmp/audit.log2"
-        }
-    }],
-    "Master": {
-        "HostPort": "127.0.0.1:12000",
-        "metadata": {
-            "cpu": "large",
-            "disk": "fast"
-        }
-    },
-    "Replicas": [{
-        "HostPort": "127.0.0.1:12002",
-        "metadata": {
-            "cpu": "small",
-            "disk": "slow"
-        }
-    }]
+	"Name": "sampleconfig",
+	"HostPort": "localhost:5432",
+	"AdminHostPort": "localhost:10000",
+	"ReadAnnotation": "read",
+	"StartAnnotation": "start",
+	"FinishAnnotation": "finish",
+	"healthcheck": {
+		"delay": 10,
+		"query": "select now();"
+	},
+	"pool": {
+		"enabled": true,
+		"capacity": 2
+	},
+	"Credentials": {
+		"username": "postgres",
+		"database": "postgres",
+		"password": "password",
+		"options": {},
+		"SSL": {
+			"Enable": false,
+			"SSLMode": "disable"
+		}
+	},
+	"Adapters": [
+		"audit"
+	],
+	"Master": {
+		"HostPort": "127.0.0.1:12000",
+		"metadata": {
+			"cpu": "large",
+			"disk": "fast"
+		}
+	},
+	"Replicas":[{
+		"HostPort": "127.0.0.1:12002",
+		"metadata": {
+			"cpu": "small",
+			"disk": "slow"
+		}
+	}]
 }
