Move config.json to examples directory and correct adapter configuration issues.

--- a/examples/config.json
+++ b/examples/config.json
@@ -23,9 +23,13 @@
 			"SSLMode": "disable"
 		}
 	},
-	"Adapters": [
-		"audit"
-	],
+	"Adapters": [{
+		"AdapterType": "audit",
+		"metadata": {
+			"Age": 6,
+			"filepath": "/tmp/audit.log2"
+		}
+	}],
 	"Master": {
 		"HostPort": "127.0.0.1:12000",
 		"metadata": {
