--- a/scripts/vagrant/ansible/replica.yml
+++ b/scripts/vagrant/ansible/replica.yml
@@ -11,34 +11,13 @@
   - include: "tasks/pg-common-tasks.yml"
 
   # Include replica specific configuration variables.
-  - include_vars: "vars/replica-vars.yml"
+  #- include_vars: "vars/replica-vars.yml"
 
   # Setup replica.
-  - name: 
+  # TODO
 
   # Configure.
-  - include: "tasks/pg-configure-tasks.yml"
-      
-  - name: "Install SSL Server Certificate"
-    copy:
-      src: "files/certs/replica-server.crt"
-      dest: "{{ postgresql_data_dir }}/server.crt"
-      owner: "{{ postgres_user }}"
-      group: "{{ postgres_user }}"
-      mode:  "0600"
-
-  - name: "Install SSL Server Key"
-    copy:
-      src: "files/certs/replica-server.key"
-      dest: "{{ postgresql_data_dir }}/server.key"
-      owner: "{{ postgres_user }}"
-      group: "{{ postgres_user }}"
-      mode:  "0600"
-
-  - name: "Install Root CA Certificate"
-    copy:
-      src: "files/certs/ca.crt"
-      dest: "{{ postgresql_data_dir }}/ca.crt"
-      owner: "{{ postgres_user }}"
-      group: "{{ postgres_user }}"
-      mode:  "0600"
+  #  - include: "tasks/pg-configure-tasks.yml"
+  
+  # Install SSL Certificates
+  #- include: "tasks/pg-ssl-tasks.yml"
