--- a/scripts/vagrant/Vagrantfile
+++ b/scripts/vagrant/Vagrantfile
@@ -91,4 +91,20 @@ Vagrant.configure("2") do |config|
     end
   end
 
+  # Test VM Configuration
+  config.vm.define "test" do |test|
+    test.vm.box = "centos/7"
+
+	test.vm.hostname = "test.crunchy.lab"
+
+	test.vm.network "private_network", ip: "192.168.56.200"
+
+	test.vm.synced_folder "../../test", "/vagrant"
+
+	test.vm.provision "ansible" do |ansible|
+	  ansible.playbook = "ansible/test.yml"
+	  ansible.verbose = "vv"
+	  ansible.sudo = true
+	end
+  end
 end
