--- a/Dockerfile.centos7
+++ b/Dockerfile.centos7
@@ -1,10 +1,10 @@
 FROM centos:7
 
-LABEL Release="0.0.1" Vendor="Crunchy Data Solutions"
+LABEL Release="1.0.0beta" Vendor="Crunchy Data Solutions"
 
 RUN yum -y install openssh-clients  hostname && yum clean all -y
 
-ADD bin/crunchyproxy /usr/bin
+ADD build/crunchy-proxy /usr/bin
 
 VOLUME /config
 
@@ -12,5 +12,5 @@ EXPOSE 5432
 
 USER daemon
 
-CMD ["crunchyproxy","-config=/config/config.json" ]
+CMD ["crunchyproxy","--config=/config/config.yaml" ]
 
