resolve large response buffer issue
These changes are necessary as there was a hard limit on the size of
response messages from the server of 4096 bytes. This would cause
clients and the proxy to crash.

- removes hard limit of 4096 bytes.
- add startup message specific receive function.
- receive function must be called for each message on the wire.
- updated all workflows where to account for multiple messages being
processed at once.

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -9,10 +9,10 @@ nodes:
     hostport: 192.168.56.100:5432
     role: master
     metadata: {}
-  replica1:
-    hostport: 192.168.56.101:5432
-    role: replica
-    metadata: {}
+    #   replica1:
+    #hostport: 192.168.56.101:5432
+    #role: replica
+    #metadata: {}
 
 credentials:
   username: postgres
